--- a/terms-of-use.html
+++ b/terms-of-use.html
@@ -1,16 +1,23 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="tr">
 
 <head>
-   <meta charset="utf-8">
-   <meta name="viewport" content="width=device-width, initial-scale=1">
-   <meta name="description" content="ReelRusher - Match-3 ve Zuma hibrit puzzle oyunu. Sayfa bulunamadı.">
+   <meta charset="UTF-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-   <!-- Title & Favicon -->
-   <title>404 - Sayfa Bulunamadı | ReelRusher</title>
+   <!-- Title -->
+   <title>Kullanım Koşulları - ReelRusher</title>
+
+   <!-- Favicon -->
    <link rel="shortcut icon" href="assets/favicon.png" type="image/png">
-  <script type="module" crossorigin src="assets/main-DwB1b1zN.js"></script>
-  <link rel="stylesheet" crossorigin href="assets/main-B9xypkzf.css">
+
+   <!-- CSS Files -->
+   <link rel="stylesheet" href="assets/main-B9xypkzf.css">
+
+   <!-- Meta Tags -->
+   <meta name="description" content="ReelRusher kullanım koşulları ve hizmet şartları. Oyunu kullanmadan önce lütfen okuyun.">
+   <meta name="keywords" content="kullanım koşulları, hizmet şartları, ReelRusher, oyun kuralları">
 </head>
 
 <body>
@@ -22,7 +29,6 @@
    </div>
 
    
- 
    <!-- Header Area -->
    <header class="header-area">
       <!-- Header Top -->
@@ -127,10 +133,10 @@
 
          <!-- Breadcrumb Content -->
          <div class="breadcrumb-content">
-            <h2>Sayfa Bulunamadı</h2>
+            <h2>Kullanım Koşulları</h2>
             <ul class="list-unstyled">
                <li><a href="index.html">Ana Sayfa</a></li>
-               <li>404 Hata</li>
+               <li>Kullanım Koşulları</li>
             </ul>
          </div>
       </div>
@@ -139,23 +145,67 @@
       <div class="divider"></div>
    </div>
 
-   <!-- Error Section -->
-   <div class="error-section">
+   <!-- Terms of Use Content -->
+   <section class="terms-of-use-section">
       <!-- Divider -->
       <div class="divider"></div>
 
       <div class="container">
          <div class="row justify-content-center">
-            <div class="col-12 col-sm-10 col-md-8 col-lg-6">
-               <!-- Error Content -->
-               <div class="error-content text-center">
-                  <img class="mb-4" src="assets/404-BDsgtSdP.png" alt="">
-                  <p class="mb-5 px-md-5">Üzgünüz, aradığınız sayfa mevcut değil. Bir sorun olduğunu düşünüyorsanız, 
-                     lütfen bizimle iletişime geçin veya ana sayfaya dönün.</p>
-                  <a href="index.html" class="btn btn-primary">
-                     <span>Ana Sayfaya Dön <i class="ti ti-arrow-up-right"></i></span>
-                     <span>Ana Sayfaya Dön <i class="ti ti-arrow-up-right"></i></span>
-                  </a>
+            <div class="col-12 col-lg-10">
+               <div class="terms-content">
+                  <h3 class="mb-4">Hizmet Koşulları</h3>
+                  <p class="mb-4">ReelRusher web sitesini ve oyununu kullanarak, aşağıdaki kullanım koşullarını kabul etmiş sayılırsınız. Bu koşulları kabul etmiyorsanız, lütfen sitemizi kullanmayın.</p>
+
+                  <h4 class="mt-5 mb-3">1. Hizmet Tanımı</h4>
+                  <p class="mb-4">ReelRusher, tarayıcı tabanlı ücretsiz bir puzzle oyunudur. Match-3 ve Zuma mekaniklerini birleştiren benzersiz bir oyun deneyimi sunar. Oyun HTML5 teknolojisi kullanılarak geliştirilmiştir ve çoğu modern tarayıcıda çalışır.</p>
+
+                  <h4 class="mt-5 mb-3">2. Kullanım Hakları</h4>
+                  <p class="mb-3">Size aşağıdaki haklar tanınmıştır:</p>
+                  <ul class="mb-4">
+                     <li>Oyunu kişisel kullanım amacıyla oynama</li>
+                     <li>Oyun içeriğini sosyal medyada paylaşma</li>
+                     <li>Oyun hakkında yorumlar yazma ve inceleme yapma</li>
+                  </ul>
+
+                  <h4 class="mt-5 mb-3">3. Yasaklanan Davranışlar</h4>
+                  <p class="mb-3">Aşağıdaki davranışlar kesinlikle yasaktır:</p>
+                  <ul class="mb-4">
+                     <li>Oyunu tersine mühendislik ile inceleme</li>
+                     <li>Oyun kodlarını kopyalama veya çalma</li>
+                     <li>Oyunu ticari amaçlarla kullanma</li>
+                     <li>Sistem güvenliğini tehdit eden aktiviteler</li>
+                     <li>Spam veya kötü amaçlı içerik gönderme</li>
+                  </ul>
+
+                  <h4 class="mt-5 mb-3">4. Fikri Mülkiyet Hakları</h4>
+                  <p class="mb-4">ReelRusher oyunu, grafikleri, müzikleri ve tüm içerikleri telif hakkı ile korunmaktadır. Bu içeriklerin tamamı ReelRusher ekibine aittir ve izinsiz kullanımı yasaktır.</p>
+
+                  <h4 class="mt-5 mb-3">5. Hesap Sorumluluğu</h4>
+                  <p class="mb-4">Oyun hesabınız ve ilerlemenizin güvenliği sizin sorumluluğunuzdadır. Tarayıcı verilerinizi temizlerseniz oyun ilerlemeniz kaybolabilir.</p>
+
+                  <h4 class="mt-5 mb-3">6. Hizmet Değişiklikleri</h4>
+                  <p class="mb-4">ReelRusher ekibi, oyunu geliştirmek ve iyileştirmek amacıyla herhangi bir zamanda değişiklik yapma hakkını saklı tutar. Önemli değişiklikler önceden duyurulacaktır.</p>
+
+                  <h4 class="mt-5 mb-3">7. Sorumluluk Reddi</h4>
+                  <p class="mb-4">ReelRusher ücretsiz bir hizmet olarak sunulmaktadır. Teknik sorunlar, veri kaybı veya hizmet kesintilerinden doğan zararlardan sorumlu değiliz.</p>
+
+                  <h4 class="mt-5 mb-3">8. Yaş Sınırlaması</h4>
+                  <p class="mb-4">ReelRusher tüm yaş grupları için uygundur. Ancak 13 yaş altındaki kullanıcıların ebeveyn izni ile oynaması önerilir.</p>
+
+                  <h4 class="mt-5 mb-3">9. Hesap Askıya Alma</h4>
+                  <p class="mb-4">Kullanım koşullarını ihlal eden kullanıcıların hesapları uyarı verilerek askıya alınabilir veya kalıcı olarak engellenebilir.</p>
+
+                  <h4 class="mt-5 mb-3">10. Uyuşmazlık Çözümü</h4>
+                  <p class="mb-4">Bu koşullardan doğan uyuşmazlıklar Türkiye Cumhuriyeti yasalarına tabidir ve İstanbul mahkemeleri yetkilidir.</p>
+
+                  <h4 class="mt-5 mb-3">11. İletişim</h4>
+                  <p class="mb-4">Kullanım koşulları hakkında sorularınız için <a href="mailto:info@reelrusher.com">info@reelrusher.com</a> adresinden bizimle iletişime geçebilirsiniz.</p>
+
+                  <h4 class="mt-5 mb-3">12. Koşul Değişiklikleri</h4>
+                  <p class="mb-4">Bu kullanım koşulları düzenli olarak güncellenebilir. Önemli değişiklikler web sitesinde duyurulacak ve kullanıcılara e-posta ile bildirilecektir.</p>
+
+                  <p class="text-muted mt-5"><strong>Son Güncelleme:</strong> 23 Temmuz 2025</p>
                </div>
             </div>
          </div>
@@ -163,8 +213,9 @@
 
       <!-- Divider -->
       <div class="divider"></div>
-   </div>
- <!-- Footer Section -->
+   </section>
+
+   <!-- Footer Section -->
    <footer class="footer-section" style="background-color: #174035;">
       <!-- Divider -->
       <div class="divider"></div>
@@ -260,11 +311,9 @@
 
    <!-- Cookie Alert -->
    <div class="cookiealert shadow-lg show">
-      <h4 class="text-white"><i class="ti ti-cookie"></i> Cookie Alert</h4>
-      <p class="mb-4 text-white">We use cookies for the best experience on our website, for social media features and to
-         anal
-         traffic. accepting you agree to our use of cookies. Read <a href="#" target="_blank"> Cookies Policy.</a></p>
-      <button class="btn btn-dark btn-sm acceptcookies" type="button" aria-label="Close">Accept</button>
+      <h4 class="text-white"><i class="ti ti-cookie"></i> Çerez Uyarısı</h4>
+      <p class="mb-4 text-white">Web sitemizde en iyi deneyimi yaşamanız için çerezleri kullanıyoruz. Devam ederek çerez kullanımını kabul etmiş olursunuz. <a href="privacy-policy.html" target="_blank">Çerez Politikası</a> için tıklayın.</p>
+      <button class="btn btn-dark btn-sm acceptcookies" type="button" aria-label="Close">Kabul Et</button>
    </div>
 
    <!-- Scroll To Top -->
@@ -272,6 +321,8 @@
       <i class="ti ti-arrow-up"></i>
    </button>
 
-</body>
+   <!-- JS Files -->
+   <script src="assets/main-DwB1b1zN.js"></script>
 
+</body>
 </html>
