--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -1,16 +1,23 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="tr">
 
 <head>
-   <meta charset="utf-8">
-   <meta name="viewport" content="width=device-width, initial-scale=1">
-   <meta name="description" content="ReelRusher - Match-3 ve Zuma hibrit puzzle oyunu. Sayfa bulunamadı.">
+   <meta charset="UTF-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-   <!-- Title & Favicon -->
-   <title>404 - Sayfa Bulunamadı | ReelRusher</title>
+   <!-- Title -->
+   <title>Gizlilik ve Çerez Politikası - ReelRusher</title>
+
+   <!-- Favicon -->
    <link rel="shortcut icon" href="assets/favicon.png" type="image/png">
-  <script type="module" crossorigin src="assets/main-DwB1b1zN.js"></script>
-  <link rel="stylesheet" crossorigin href="assets/main-B9xypkzf.css">
+
+   <!-- CSS Files -->
+   <link rel="stylesheet" href="assets/main-B9xypkzf.css">
+
+   <!-- Meta Tags -->
+   <meta name="description" content="ReelRusher gizlilik ve çerez politikası. Kişisel verilerinizin nasıl korunduğunu öğrenin.">
+   <meta name="keywords" content="gizlilik, çerez politikası, kişisel veriler, ReelRusher">
 </head>
 
 <body>
@@ -21,7 +28,6 @@
       </div>
    </div>
 
-   
  
    <!-- Header Area -->
    <header class="header-area">
@@ -127,10 +133,10 @@
 
          <!-- Breadcrumb Content -->
          <div class="breadcrumb-content">
-            <h2>Sayfa Bulunamadı</h2>
+            <h2>Gizlilik ve Çerez Politikası</h2>
             <ul class="list-unstyled">
                <li><a href="index.html">Ana Sayfa</a></li>
-               <li>404 Hata</li>
+               <li>Gizlilik ve Çerez Politikası</li>
             </ul>
          </div>
       </div>
@@ -139,23 +145,63 @@
       <div class="divider"></div>
    </div>
 
-   <!-- Error Section -->
-   <div class="error-section">
+   <!-- Privacy Policy Content -->
+   <section class="privacy-policy-section">
       <!-- Divider -->
       <div class="divider"></div>
 
       <div class="container">
          <div class="row justify-content-center">
-            <div class="col-12 col-sm-10 col-md-8 col-lg-6">
-               <!-- Error Content -->
-               <div class="error-content text-center">
-                  <img class="mb-4" src="assets/404-BDsgtSdP.png" alt="">
-                  <p class="mb-5 px-md-5">Üzgünüz, aradığınız sayfa mevcut değil. Bir sorun olduğunu düşünüyorsanız, 
-                     lütfen bizimle iletişime geçin veya ana sayfaya dönün.</p>
-                  <a href="index.html" class="btn btn-primary">
-                     <span>Ana Sayfaya Dön <i class="ti ti-arrow-up-right"></i></span>
-                     <span>Ana Sayfaya Dön <i class="ti ti-arrow-up-right"></i></span>
-                  </a>
+            <div class="col-12 col-lg-10">
+               <div class="privacy-content">
+                  <h3 class="mb-4">Kişisel Verilerin Korunması</h3>
+                  <p class="mb-4">ReelRusher olarak, kişisel verilerinizin güvenliği bizim için önceliklidir. Bu politika, web sitemizi ziyaret ettiğinizde ve oyunumuzu oynadığınızda kişisel verilerinizin nasıl toplandığını, kullanıldığını ve korunduğunu açıklamaktadır.</p>
+
+                  <h4 class="mt-5 mb-3">Toplanan Bilgiler</h4>
+                  <p class="mb-3">ReelRusher'ı kullanırken aşağıdaki bilgileri toplayabiliriz:</p>
+                  <ul class="mb-4">
+                     <li>E-posta adresiniz (iletişim formları ve haber bülteni için)</li>
+                     <li>Oyun ilerleme verileriniz (yerel depolama)</li>
+                     <li>Tarayıcı bilgileri ve IP adresi</li>
+                     <li>Çerez verileri</li>
+                  </ul>
+
+                  <h4 class="mt-5 mb-3">Verilerin Kullanımı</h4>
+                  <p class="mb-3">Toplanan veriler şu amaçlarla kullanılır:</p>
+                  <ul class="mb-4">
+                     <li>Oyun deneyiminizi kişiselleştirmek</li>
+                     <li>Teknik destek sağlamak</li>
+                     <li>Oyun güncellemeleri hakkında bilgilendirme</li>
+                     <li>Web sitesinin performansını analiz etmek</li>
+                  </ul>
+
+                  <h4 class="mt-5 mb-3">Çerez Politikası</h4>
+                  <p class="mb-3">Web sitemiz aşağıdaki çerez türlerini kullanır:</p>
+                  <ul class="mb-4">
+                     <li><strong>Zorunlu Çerezler:</strong> Web sitesinin temel işlevleri için gereklidir</li>
+                     <li><strong>Performans Çerezleri:</strong> Web sitesi trafiğini analiz etmek için</li>
+                     <li><strong>İşlevsellik Çerezleri:</strong> Oyun tercihlerinizi hatırlamak için</li>
+                  </ul>
+
+                  <h4 class="mt-5 mb-3">Veri Güvenliği</h4>
+                  <p class="mb-4">Kişisel verilerinizi korumak için endüstri standardı güvenlik önlemleri alıyoruz. Verileriniz şifrelenerek saklanır ve yetkisiz erişime karşı korunur.</p>
+
+                  <h4 class="mt-5 mb-3">Haklarınız</h4>
+                  <p class="mb-3">KVKK kapsamında aşağıdaki haklara sahipsiniz:</p>
+                  <ul class="mb-4">
+                     <li>Kişisel verilerinizin işlenip işlenmediğini öğrenme</li>
+                     <li>Kişisel verilerinizin silinmesini talep etme</li>
+                     <li>Kişisel verilerinizin düzeltilmesini isteme</li>
+                     <li>Kişisel verilerinizin aktarıldığı üçüncü kişileri öğrenme</li>
+                  </ul>
+
+                  <h4 class="mt-5 mb-3">İletişim</h4>
+                  <p class="mb-4">Gizlilik politikamız hakkında sorularınız için <a href="mailto:info@reelrusher.com">info@reelrusher.com</a> adresinden bizimle iletişime geçebilirsiniz.</p>
+
+                  <h4 class="mt-5 mb-3">Politika Güncellemeleri</h4>
+                  <p class="mb-4">Bu politika düzenli olarak gözden geçirilir ve güncellenebilir. Önemli değişiklikler hakkında e-posta yoluyla bilgilendirileceksiniz.</p>
+
+                  <p class="text-muted mt-5"><strong>Son Güncelleme:</strong> 23 Temmuz 2025</p>
                </div>
             </div>
          </div>
@@ -163,8 +209,9 @@
 
       <!-- Divider -->
       <div class="divider"></div>
-   </div>
- <!-- Footer Section -->
+   </section>
+
+  <!-- Footer Section -->
    <footer class="footer-section" style="background-color: #174035;">
       <!-- Divider -->
       <div class="divider"></div>
@@ -260,11 +307,9 @@
 
    <!-- Cookie Alert -->
    <div class="cookiealert shadow-lg show">
-      <h4 class="text-white"><i class="ti ti-cookie"></i> Cookie Alert</h4>
-      <p class="mb-4 text-white">We use cookies for the best experience on our website, for social media features and to
-         anal
-         traffic. accepting you agree to our use of cookies. Read <a href="#" target="_blank"> Cookies Policy.</a></p>
-      <button class="btn btn-dark btn-sm acceptcookies" type="button" aria-label="Close">Accept</button>
+      <h4 class="text-white"><i class="ti ti-cookie"></i> Çerez Uyarısı</h4>
+      <p class="mb-4 text-white">Web sitemizde en iyi deneyimi yaşamanız için çerezleri kullanıyoruz. Devam ederek çerez kullanımını kabul etmiş olursunuz. <a href="privacy-policy.html" target="_blank">Çerez Politikası</a> için tıklayın.</p>
+      <button class="btn btn-dark btn-sm acceptcookies" type="button" aria-label="Close">Kabul Et</button>
    </div>
 
    <!-- Scroll To Top -->
@@ -272,6 +317,8 @@
       <i class="ti ti-arrow-up"></i>
    </button>
 
-</body>
+   <!-- JS Files -->
+   <script src="assets/main-DwB1b1zN.js"></script>
 
+</body>
 </html>
