--- a/mechanics.html
+++ b/mechanics.html
@@ -177,20 +177,12 @@
                         <img src="assets/110-B8xy7JB4.jpg" alt="">
                      </div>
                   </div>
-                  <p>Fundamentally, our work is also about humanising technology. We put the user experience at the
-                     heart of an innovation, building-in simplicity and making new technology more accessible. After
-                     all, products which are delightfully simple to use are more likely to be adopted.</p>
-                  <p>Test your ideas with minimal risk. Test even most complex ideas, involving emerging technologies -
-                     like blockchain - with the help of our expert Outsourceo team. We'll help you with predictions,
-                     roadmapping and post-PoC Development analysis</p>
+                  <p>ReelRusher'da her hamle önemlidir. Topları doğru açıyla fırlatarak zincirleme reaksiyonlar oluşturun ve skorunuzu katlayın. Oyunun benzersiz fizik motoru sayesinde her atış gerçekçi ve tahmin edilebilir davranır, bu da stratejik planlama yapmanıza olanak tanır.</p>
+                  <p>Özel güçler sistemi oyuna derinlik katar. Bomba toplar, gökkuşağı toplar ve dondurucu güçler gibi özel yetenekleri doğru zamanda kullanarak en zor seviyeleri bile geçebilirsiniz. Her güç farklı stratejiler gerektirir ve oyunu her defasında yeniden keşfetmenize imkan sağlar.</p>
                   <img src="assets/98-D6V1f97g.jpg" alt="">
-                  <h2>The science of design & the design of science</h2>
-                  <p>Fundamentally, our work is also about humanising technology. We put the user experience at the
-                     heart of an innovation, building-in simplicity and making new technology more accessible. After
-                     all, products which are delightfully simple to use are more likely to be adopted</p>
-                  <p>When it comes to encapsulating technical innovation in a form that chimes with an end user, our
-                     early involvement, often before the science leaves the bench, can help to ensure that the human
-                     factors as well as the production design issues are at the optimum stage in the process</p>
+                  <h2>İleri Seviye Oyun Stratejileri</h2>
+                  <p>ReelRusher'da ustalaşmak için sadece topları eşleştirmek yeterli değildir. Piramit yapısının dinamiklerini anlamak, zincirleme kombo sistemini etkin kullanmak ve her seviyenin özel gereksinimlerini kavramak gerekmektedir.</p>
+                  <p>Profesyonel oyuncular genellikle tahta durumunu analiz ederek en verimli hamleleri planlarlar. Üst sıralardaki topları temizlemek, alt sıralar için alan açar ve daha büyük kombo zincirleri oluşturma şansı verir. Bu yaklaşım özellikle zaman baskısı olan seviyelerde kritik öneme sahiptir.</p>
                </div>
             </div>
 
@@ -198,26 +190,26 @@
                <div class="d-flex flex-column gap-5">
                   <!-- Widget -->
                   <div class="blog-widget">
-                     <h4 class="h4 mb-4 widget-title"><span></span> Categories</h4>
+                     <h4 class="h4 mb-4 widget-title"><span></span> Oyun Kategorileri</h4>
 
                      <ul class="blog-list style-two">
                         <li>
-                           <a href="#">Personal service</a>
+                           <a href="#">Temel Mekanikler</a>
                         </li>
                         <li>
-                           <a href="#">Education service</a>
+                           <a href="#">Özel Güçler</a>
                         </li>
                         <li>
-                           <a href="#">Student service</a>
+                           <a href="#">Combo Sistemi</a>
                         </li>
                         <li>
-                           <a href="#">Wedding service</a>
+                           <a href="#">Seviye Tipleri</a>
                         </li>
                         <li>
-                           <a href="#">Business service</a>
+                           <a href="#">Stratejiler</a>
                         </li>
                         <li>
-                           <a href="#">Others service</a>
+                           <a href="#">İpuçları</a>
                         </li>
                      </ul>
                   </div>
@@ -241,102 +233,6 @@
       <div class="divider"></div>
    </div>
 
-   <!-- Pricing Section -->
-   <section class="pricing-section">
-      <!-- Divider -->
-      <div class="divider"></div>
-
-      <div class="container">
-         <div class="row g-4">
-            <!-- Pricing Card -->
-            <div class="col-12 col-sm-6 col-lg-4">
-               <div class="pricing-card wow fadeInUp" data-wow-delay="400ms" data-wow-duration="1000ms">
-                  <!-- Pricing Header -->
-                  <div class="pricing-header">
-                     <h5>Basic Plan</h5>
-                     <h2 class="mb-0">$49<span>/month</span></h2>
-                  </div>
-                  <hr>
-                  <!-- Pricing Content -->
-                  <ul class="pricing-content list-unstyled">
-                     <li><i class="ti ti-check"></i> Advanced Analytics</li>
-                     <li><i class="ti ti-check"></i> Unlimited Projects</li>
-                     <li><i class="ti ti-check"></i> Priority Support </li>
-                     <li><i class="ti ti-check"></i> Customizable Branding</li>
-                     <li><i class="ti ti-check"></i> All API Access</li>
-                  </ul>
-                  <!-- Pricing Footer -->
-                  <div class="pricing-footer mt-5">
-                     <a href="#" class="btn btn-primary w-100">
-                        <span>Get started <i class="ti ti-arrow-up-right"></i></span>
-                        <span>Get started <i class="ti ti-arrow-up-right"></i></span>
-                     </a>
-                  </div>
-               </div>
-            </div>
-
-            <!-- Pricing Card -->
-            <div class="col-12 col-sm-6 col-lg-4">
-               <div class="pricing-card active wow fadeInUp" data-wow-delay="600ms" data-wow-duration="1000ms">
-                  <!-- Pricing Header -->
-                  <div class="pricing-header">
-                     <h5>Standard Plan</h5>
-                     <h2 class="mb-0">$79<span>/month</span></h2>
-                     <!-- Badge -->
-                     <span class="badge">Popular</span>
-                  </div>
-                  <hr>
-                  <!-- Pricing Content -->
-                  <ul class="pricing-content list-unstyled">
-                     <li><i class="ti ti-check"></i> Advanced Analytics</li>
-                     <li><i class="ti ti-check"></i> Unlimited Projects</li>
-                     <li><i class="ti ti-check"></i> Priority Support </li>
-                     <li><i class="ti ti-check"></i> Customizable Branding</li>
-                     <li><i class="ti ti-check"></i> All API Access</li>
-                  </ul>
-                  <!-- Pricing Footer -->
-                  <div class="pricing-footer mt-5">
-                     <a href="#" class="btn btn-light w-100">
-                        <span>Get started <i class="ti ti-arrow-up-right"></i></span>
-                        <span>Get started <i class="ti ti-arrow-up-right"></i></span>
-                     </a>
-                  </div>
-               </div>
-            </div>
-
-            <!-- Pricing Card -->
-            <div class="col-12 col-sm-6 col-lg-4">
-               <div class="pricing-card wow fadeInUp" data-wow-delay="800ms" data-wow-duration="1000ms">
-                  <!-- Pricing Header -->
-                  <div class="pricing-header">
-                     <h5>Enterprise Plan</h5>
-                     <h2 class="mb-0">$99<span>/month</span></h2>
-                  </div>
-                  <hr>
-                  <!-- Pricing Content -->
-                  <ul class="pricing-content list-unstyled">
-                     <li><i class="ti ti-check"></i> Advanced Analytics</li>
-                     <li><i class="ti ti-check"></i> Unlimited Projects</li>
-                     <li><i class="ti ti-check"></i> Priority Support </li>
-                     <li><i class="ti ti-check"></i> Customizable Branding</li>
-                     <li><i class="ti ti-check"></i> All API Access</li>
-                  </ul>
-                  <!-- Pricing Footer -->
-                  <div class="pricing-footer mt-5">
-                     <a href="#" class="btn btn-primary w-100">
-                        <span>Get started <i class="ti ti-arrow-up-right"></i></span>
-                        <span>Get started <i class="ti ti-arrow-up-right"></i></span>
-                     </a>
-                  </div>
-               </div>
-            </div>
-         </div>
-      </div>
-
-      <!-- Divider -->
-      <div class="divider"></div>
-   </section>
-
    <!-- Testimonial Wrapper -->
    <section class="testimonial-section bg-secondary">
       <!-- Divider -->
@@ -353,21 +249,21 @@
 
             <div class="col-12 col-sm-8 col-lg-9 testimonial-col">
                <div class="swiper testimonial-swiper-three" id="testimonialSwiperThree">
-                  <div class="swiper-wrapper">
+                                    <div class="swiper-wrapper">
                      <!-- Testimonial Card -->
                      <div class="swiper-slide">
                         <div class="testimonial-card-three">
                            <!-- Quote Icon -->
                            <div class="quote-icon mb-3">
-                            
+                            <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewbox="0 0 40 40" fill="none">
+                              <path d="M8.33333 25H15L10 35H5L8.33333 25ZM25 25H31.6667L26.6667 35H21.6667L25 25Z" fill="#174035"/>
+                            </svg>
                            </div>
-                           <p class="testimonial-text">“It's a pleasure working with Bunker our new brand positioning
-                              guidelines and translated them beautifully and consistently into our on-going marketing
-                              comms”</p>
+                           <p class="testimonial-text">Klasik seviyeler: Temel eşleştirme mekaniği ile piramit yapısını temizleyin. Bu seviyelerde zaman baskısı yoktur, sadece strateji ve doğru hamleler önemlidir.</p>
                            <!-- Testimonial Info -->
                            <div class="testimonial-info">
-                              <h4 class="mb-1">Joshua liddell</h4>
-                              <p class="mb-0">Agency owner</p>
+                              <h4 class="mb-1">Klasik Seviyeler</h4>
+                              <p class="mb-0">Temel Mod</p>
                            </div>
                         </div>
                      </div>
@@ -377,15 +273,15 @@
                         <div class="testimonial-card-three">
                            <!-- Quote Icon -->
                            <div class="quote-icon mb-3">
-                           
+                            <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewbox="0 0 40 40" fill="none">
+                              <path d="M8.33333 25H15L10 35H5L8.33333 25ZM25 25H31.6667L26.6667 35H21.6667L25 25Z" fill="#174035"/>
+                            </svg>
                            </div>
-                           <p class="testimonial-text">“It's a pleasure working with Bunker our new brand positioning
-                              guidelines and translated them beautifully and consistently into our on-going marketing
-                              comms”</p>
+                           <p class="testimonial-text">Zaman yarışı seviyeleri: Süre dolmadan piramidi temizlemeniz gereken heyecanlı modlarda özel güçler ve hızlı düşünme kritik öneme sahiptir.</p>
                            <!-- Testimonial Info -->
                            <div class="testimonial-info">
-                              <h4 class="mb-1">Joshua liddell</h4>
-                              <p class="mb-0">Agency owner</p>
+                              <h4 class="mb-1">Zaman Yarışı</h4>
+                              <p class="mb-0">Hızlı Mod</p>
                            </div>
                         </div>
                      </div>
@@ -424,9 +320,8 @@
 
             <div class="col-12 col-md-6">
                <div class="section-heading pe-xl-5">
-                  <h2 class="mb-4">Frequently asked question</h2>
-                  <p class="mb-5">Morem ipsum dolor sit amet, consectetur adipiscing elita florai psum dolor sit
-                     amet,consectetur amet consecteture.</p>
+                  <h2 class="mb-4">Sık Sorulan Sorular</h2>
+                  <p class="mb-5">ReelRusher oyun mekanikleri hakkında en çok merak edilen sorular ve detaylı cevapları burada yer almaktadır.</p>
                </div>
 
                <!-- FAQ Accordion -->
@@ -436,13 +331,12 @@
                      <div class="accordion-item">
                         <div class="accordion-header">
                            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#faqQuestion1" aria-expanded="true" aria-controls="faqQuestion1">
-                              How to choose health insurance?
+                              Oyunu nasıl oynayabilirim?
                            </button>
                         </div>
                         <div id="faqQuestion1" class="accordion-collapse collapse show" data-bs-parent="#faqAccordion">
                            <div class="accordion-body">
-                              If you ask our clients what it's like working 36, they'll tell you how much we
-                              care about their success.
+                              ReelRusher'da amacınız renkli topları piramit şeklindeki tahtada eşleştirmektir. 3 veya daha fazla aynı renk topu yan yana getirerek onları temizleyin ve yüksek skorlar elde edin.
                            </div>
                         </div>
                      </div>
@@ -451,13 +345,12 @@
                      <div class="accordion-item">
                         <div class="accordion-header">
                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faqQuestion2" aria-expanded="false" aria-controls="faqQuestion2">
-                              How does life insurance help my family?
+                              Özel güçler nasıl çalışır?
                            </button>
                         </div>
                         <div id="faqQuestion2" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
                            <div class="accordion-body">
-                              If you ask our clients what it's like working 36, they'll tell you how much we
-                              care about their success.
+                              Özel güçler büyük eşleştirmeler yaparak kazanılır. Bomba toplar çevresindeki topları yok eder, gökkuşağı toplar herhangi bir renkle eşleşebilir ve dondurucu güçler zamana karşı yarıştığınız seviyelerde ekstra süre verir.
                            </div>
                         </div>
                      </div>
@@ -466,13 +359,12 @@
                      <div class="accordion-item">
                         <div class="accordion-header">
                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faqQuestion3" aria-expanded="false" aria-controls="faqQuestion3">
-                              Essential types of business insurance?
+                              Combo sistemi nasıl çalışır?
                            </button>
                         </div>
                         <div id="faqQuestion3" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
                            <div class="accordion-body">
-                              If you ask our clients what it's like working 36, they'll tell you how much we
-                              care about their success.
+                              Zincirleme eşleştirmeler yaparak combo puanları kazanabilirsiniz. Her ardışık eşleştirme combo çarpanınızı artırır ve daha yüksek skorlar elde etmenizi sağlar. Komboları kesintisiz tutmak için hızlı düşünün!
                            </div>
                         </div>
                      </div>
