--- a/roadmap.html
+++ b/roadmap.html
@@ -277,14 +277,7 @@
                   <div class="strategies-img style-two">
                      <img src="assets/68-D5yKXwNw.jpg" alt="">
 
-                     <!-- Play Video -->
-                     <div class="play-video-btn video-btn" data-video="https://youtu.be/VCPGMjCW0is">
-                        <div class="icon">
-                           <i class="ti ti-player-play-filled"></i>
-                        </div>
-                        <!-- Video Sonar -->
-                        <div class="video-sonar"></div>
-                     </div>
+                    
                   </div>
                </div>
             </div>
@@ -346,10 +339,12 @@
             <div class="col-12 col-sm-6 col-lg-3">
                <div class="features-card">
                   <div class="icon">
-                     <i class="flaticon-planning"></i>
+                     <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="#174035" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                        <path d="M12 2l3.09 6.26L22 9.27l-5 4.87 1.18 6.88L12 17.77l-6.18 3.25L7 14.14 2 9.27l6.91-1.01L12 2z"/>
+                     </svg>
                   </div>
                   <h5>Konsept ve Tasarım</h5>
-                  <p class="mb-4">Oyun mekaniklerinin belirlenmesi, karakter tasarımları ve görsel kimlик çalışmaları.</p>
+                  <p class="mb-4">ReelRusher'ın benzersiz piramit şeklindeki oyun tahtası ve Match-3 + Zuma hibrit mekaniklerinin tasarlanması.</p>
                   <a href="#" class="btn-style-two">
                      <span>Tamamlandı</span>
                      <i class="ti ti-check"></i>
@@ -361,10 +356,13 @@
             <div class="col-12 col-sm-6 col-lg-3">
                <div class="features-card">
                   <div class="icon">
-                     <i class="flaticon-tax"></i>
+                     <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="#174035" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                        <polyline points="16 18 22 12 16 6"/>
+                        <polyline points="8 6 2 12 8 18"/>
+                     </svg>
                   </div>
-                  <h5>Core Development</h5>
-                  <p class="mb-4">Oyun motorunun kodlanması, temel mekaniлerin implementasyonu ve ilk test versiyonu.</p>
+                  <h5>Alpha Geliştirme</h5>
+                  <p class="mb-4">HTML5 Canvas motoru geliştirilmesi, temel oyun mekaniği kodlanması ve ilk oynanabilir versiyon.</p>
                   <a href="#" class="btn-style-two">
                      <span>Devam Ediyor</span>
                      <i class="ti ti-loader"></i>
@@ -376,27 +374,18 @@
             <div class="col-12 col-sm-6 col-lg-3">
                <div class="features-card">
                   <div class="icon">
-                     <i class="flaticon-return-on-investment"></i>
+                     <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="#174035" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                        <path d="M9 12l2 2 4-4"/>
+                        <path d="M21 12c-1 0-3-1-3-3s2-3 3-3 3 1 3 3-2 3-3 3"/>
+                        <path d="M3 12c1 0 3-1 3-3s-2-3-3-3-3 1-3 3 2 3 3 3"/>
+                        <path d="M12 3c0 1-1 3-3 3s-3-2-3-3 1-3 3-3 3 2 3 3"/>
+                        <path d="M12 21c0-1 1-3 3-3s3 2 3 3-1 3-3 3-3-2-3-3"/>
+                     </svg>
                   </div>
                   <h5>Beta Test</h5>
-                  <p class="mb-4">Kapsamlı testler, hata düzeltmeleri ve oyuncu geri bildirimlerinin değerlendirilmesi.</p>
+                  <p class="mb-4">Kapalı beta testleri, hata düzeltmeleri, oyuncu geri bildirimlerinin değerlendirilmesi ve optimizasyonlar.</p>
                   <a href="#" class="btn-style-two">
-                     <span>Planlanan</span>
-                     <i class="ti ti-clock"></i>
-                  </a>
-               </div>
-            </div>
-
-            <!-- Features Card -->
-            <div class="col-12 col-sm-6 col-lg-3">
-               <div class="features-card">
-                  <div class="icon">
-                     <i class="flaticon-risk-management"></i>
-                  </div>
-                  <h5>Lansman</h5>
-                  <p class="mb-4">Final optimizasyonlar, platform entegrasyonları ve oyunun resmi olarak yayınlanması.</p>
-                  <a href="#" class="btn-style-two">
-                     <span>2024 Q4</span>
+                     <span>2025 Q1</span>
                      <i class="ti ti-calendar"></i>
                   </a>
                </div>
@@ -406,13 +395,17 @@
             <div class="col-12 col-sm-6 col-lg-3">
                <div class="features-card">
                   <div class="icon">
-                     <i class="flaticon-planning"></i>
+                     <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="#174035" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                        <polygon points="12 2 22 8.5 22 15.5 12 22 2 15.5 2 8.5 12 2"/>
+                        <line x1="12" y1="22" x2="12" y2="15.5"/>
+                        <polyline points="22,8.5 12,15.5 2,8.5"/>
+                     </svg>
                   </div>
-                  <h5>Level Editor</h5>
-                  <p class="mb-4">Oyuncuların kendi seviyelerini oluşturabileceği özel editör aracının geliştirilmesi.</p>
+                  <h5>İlk Lansman</h5>
+                  <p class="mb-4">ReelRusher'ın resmi lansmanı, web ve mobil platformlarda yayına girme, pazarlama kampanyası.</p>
                   <a href="#" class="btn-style-two">
-                     <span>Planlanan</span>
-                     <i class="ti ti-clock"></i>
+                     <span>2025 Q2</span>
+                     <i class="ti ti-calendar"></i>
                   </a>
                </div>
             </div>
@@ -421,12 +414,34 @@
             <div class="col-12 col-sm-6 col-lg-3">
                <div class="features-card">
                   <div class="icon">
-                     <i class="flaticon-tax"></i>
+                     <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="#174035" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                        <path d="M14.7 6.3a1 1 0 0 0 0 1.4l1.6 1.6a1 1 0 0 0 1.4 0l3.77-3.77a6 6 0 0 1-7.94 7.94l-6.91 6.91a2.12 2.12 0 0 1-3-3l6.91-6.91a6 6 0 0 1 7.94-7.94l-3.76 3.76z"/>
+                     </svg>
                   </div>
-                  <h5>Multiplayer Mode</h5>
-                  <p class="mb-4">Arkadaşlarla birlikte oynayabileceğiniz çok oyunculu mod ve rekabet sistemi.</p>
+                  <h5>Seviye Editörü</h5>
+                  <p class="mb-4">Oyuncuların kendi seviyelerini oluşturabileceği, paylaşabileceği ve oynayabileceği editör aracı.</p>
                   <a href="#" class="btn-style-two">
-                     <span>2025 Q1</span>
+                     <span>2025 Q3</span>
+                     <i class="ti ti-calendar"></i>
+                  </a>
+               </div>
+            </div>
+
+            <!-- Features Card -->
+            <div class="col-12 col-sm-6 col-lg-3">
+               <div class="features-card">
+                  <div class="icon">
+                     <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="#174035" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                        <path d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2"/>
+                        <circle cx="9" cy="7" r="4"/>
+                        <path d="M22 21v-2a4 4 0 0 0-3-3.87"/>
+                        <path d="M16 3.13a4 4 0 0 1 0 7.75"/>
+                     </svg>
+                  </div>
+                  <h5>Çok Oyunculu Mod</h5>
+                  <p class="mb-4">Arkadaşlarla yarışma, turnuvalar, liderlik tabloları ve sosyal özellikler entegrasyonu.</p>
+                  <a href="#" class="btn-style-two">
+                     <span>2025 Q4</span>
                      <i class="ti ti-calendar"></i>
                   </a>
                </div>
@@ -441,12 +456,12 @@
                   </div>
                   <!-- Content -->
                   <div>
-                     <h5 class="text-white">7/24 Topluluk Desteği</h5>
-                     <p class="mb-4 text-white">Geliştirme sürecindeki her aşamada topluluktan gelen geri bildirimler 
-                        bizim için çok değerli.</p>
-                     <a href="#" class="btn btn-primary">
-                        <span>Discord'a Katıl <i class="ti ti-arrow-up-right"></i></span>
-                        <span>Discord'a Katıl <i class="ti ti-arrow-up-right"></i></span>
+                     <h5 class="text-white">2026 Mega Güncelleme</h5>
+                     <p class="mb-4 text-white">Yapay zeka destekli seviye üretimi, gerçek zamanlı etkinlikler, 
+                        mobil uygulama lansmanı ve yeni oyun modları ile ReelRusher evrimini tamamlıyor.</p>
+                     <a href="contact.html" class="btn btn-primary">
+                        <span>2026 Q1-Q4 <i class="ti ti-arrow-up-right"></i></span>
+                        <span>2026 Q1-Q4 <i class="ti ti-arrow-up-right"></i></span>
                      </a>
                   </div>
                </div>
