--- a/about-us.html
+++ b/about-us.html
@@ -5,6 +5,7 @@
    <meta charset="utf-8">
    <meta name="viewport" content="width=device-width, initial-scale=1">
    <meta name="description" content="ReelRusher Hakkında - Eğlenceli Match-3 ve Zuma tarzı bulmaca oyunu hakkında bilgi">
+   <meta name="robots" content="index, follow">
 
    <!-- Title & Favicon -->
    <title>Hakkımızda | ReelRusher - Match-3 Bulmaca Oyunu</title>
