--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,7 @@
    <meta charset="utf-8">
    <meta name="viewport" content="width=device-width, initial-scale=1">
    <meta name="description" content="ReelRusher İletişim - Eğlenceli Match-3 ve Zuma tarzı bulmaca oyunu ile iletişime geçin">
+   <meta name="robots" content="index, follow">
 
    <!-- Title & Favicon -->
    <title>İletişim | ReelRusher - Match-3 Bulmaca Oyunu</title>
