--- a/game-art.html
+++ b/game-art.html
@@ -5,6 +5,7 @@
    <meta charset="utf-8">
    <meta name="viewport" content="width=device-width, initial-scale=1">
    <meta name="description" content="ReelRusher - Oyun Sanatı ve Kapaklar | Görsel tasarım ve sanat galerisi">
+   <meta name="robots" content="index, follow">
 
    <!-- Title & Favicon -->
    <title>Oyun Sanatı ve Kapaklar | ReelRusher - Match-3 Puzzle Oyunu</title>
