--- a/roadmap.html
+++ b/roadmap.html
@@ -5,6 +5,7 @@
    <meta charset="utf-8">
    <meta name="viewport" content="width=device-width, initial-scale=1">
    <meta name="description" content="ReelRusher - Match-3 Zuma Tarzı Puzzle Oyunu">
+   <meta name="robots" content="index, follow">
 
    <!-- Title & Favicon -->
    <title>Geliştirme Yol Haritası | ReelRusher - Match-3 Zuma Tarzı Puzzle Oyunu</title>
