--- a/404.html
+++ b/404.html
@@ -5,6 +5,7 @@
    <meta charset="utf-8">
    <meta name="viewport" content="width=device-width, initial-scale=1">
    <meta name="description" content="ReelRusher - Match-3 ve Zuma hibrit puzzle oyunu. Sayfa bulunamadı.">
+   <meta name="robots" content="noindex, follow">
 
    <!-- Title & Favicon -->
    <title>404 - Sayfa Bulunamadı | ReelRusher</title>
