--- a/mechanics.html
+++ b/mechanics.html
@@ -5,6 +5,7 @@
    <meta charset="utf-8">
    <meta name="viewport" content="width=device-width, initial-scale=1">
    <meta name="description" content="ReelRusher - Oyun Mekanikleri | Match-3 ve Zuma hibrit mekanikleri">
+   <meta name="robots" content="index, follow">
 
    <!-- Title & Favicon -->
    <title>Oyun Mekanikleri | ReelRusher - Match-3 Puzzle Oyunu</title>
