--- a/technology.html
+++ b/technology.html
@@ -5,6 +5,7 @@
    <meta charset="utf-8">
    <meta name="viewport" content="width=device-width, initial-scale=1">
    <meta name="description" content="ReelRusher - Teknoloji ve Platformlar | Match-3 + Zuma hibrit oyunu">
+   <meta name="robots" content="index, follow">
 
    <!-- Title & Favicon -->
    <title>Teknoloji ve Platformlar | ReelRusher - Match-3 Puzzle Oyunu</title>
