--- a/index.html
+++ b/index.html
@@ -7,6 +7,23 @@
    <meta name="description" content="ReelRusher - Eğlenceli Match-3 ve Zuma tarzı bulmaca oyunu">
    <meta name="robots" content="index, follow">
 
+   <!-- Open Graph Meta Tags -->
+   <meta property="og:title" content="ReelRusher - Match-3 Bulmaca Oyunu">
+   <meta property="og:description" content="En heyecanverici Match-3 ve Zuma hibrit bulmaca oyunu. Piramit şeklindeki tahtada renkli taşları eşleştir ve eğlen!">
+   <meta property="og:image" content="https://reelrusher.com/assets/6-BJrEYN0P.png">
+   <meta property="og:url" content="https://reelrusher.com/">
+   <meta property="og:type" content="website">
+   <meta property="og:site_name" content="ReelRusher">
+   <meta property="og:locale" content="tr_TR">
+
+   <!-- Twitter Card Meta Tags -->
+   <meta name="twitter:card" content="summary_large_image">
+   <meta name="twitter:title" content="ReelRusher - Match-3 Bulmaca Oyunu">
+   <meta name="twitter:description" content="En heyecanverici Match-3 ve Zuma hibrit bulmaca oyunu. Piramit şeklindeki tahtada renkli taşları eşleştir ve eğlen!">
+   <meta name="twitter:image" content="https://reelrusher.com/assets/6-BJrEYN0P.png">
+   <meta name="twitter:site" content="@reelrusher">
+   <meta name="twitter:creator" content="@reelrusher">
+
    <!-- Title & Favicon -->
    <title>Ana Sayfa | ReelRusher - Match-3 Bulmaca Oyunu</title>
    <link rel="shortcut icon" href="assets/favicon.png" type="image/png">
