--- a/mechanics.html
+++ b/mechanics.html
@@ -7,6 +7,23 @@
    <meta name="description" content="ReelRusher - Oyun Mekanikleri | Match-3 ve Zuma hibrit mekanikleri">
    <meta name="robots" content="index, follow">
 
+   <!-- Open Graph Meta Tags -->
+   <meta property="og:title" content="Oyun Mekanikleri | ReelRusher">
+   <meta property="og:description" content="ReelRusher'ın benzersiz oyun mekaniği hakkında detaylı bilgi. Match-3 ve Zuma hibrit sistemi nasıl çalışır?">
+   <meta property="og:image" content="https://reelrusher.com/assets/6-BJrEYN0P.png">
+   <meta property="og:url" content="https://reelrusher.com/mechanics.html">
+   <meta property="og:type" content="article">
+   <meta property="og:site_name" content="ReelRusher">
+   <meta property="og:locale" content="tr_TR">
+
+   <!-- Twitter Card Meta Tags -->
+   <meta name="twitter:card" content="summary_large_image">
+   <meta name="twitter:title" content="Oyun Mekanikleri | ReelRusher">
+   <meta name="twitter:description" content="ReelRusher'ın benzersiz oyun mekaniği hakkında detaylı bilgi. Match-3 ve Zuma hibrit sistemi nasıl çalışır?">
+   <meta name="twitter:image" content="https://reelrusher.com/assets/6-BJrEYN0P.png">
+   <meta name="twitter:site" content="@reelrusher">
+   <meta name="twitter:creator" content="@reelrusher">
+
    <!-- Title & Favicon -->
    <title>Oyun Mekanikleri | ReelRusher - Match-3 Puzzle Oyunu</title>
    <link rel="shortcut icon" href="assets/favicon.png" type="image/png">
