--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -7,6 +7,23 @@
    <meta http-equiv="X-UA-Compatible" content="ie=edge">
    <meta name="robots" content="index, follow">
 
+   <!-- Open Graph Meta Tags -->
+   <meta property="og:title" content="Gizlilik ve Çerez Politikası | ReelRusher">
+   <meta property="og:description" content="ReelRusher gizlilik politikası ve çerez kullanımı hakkında detaylı bilgi. Kişisel verilerin korunması.">
+   <meta property="og:image" content="https://reelrusher.com/assets/6-BJrEYN0P.png">
+   <meta property="og:url" content="https://reelrusher.com/privacy-policy.html">
+   <meta property="og:type" content="article">
+   <meta property="og:site_name" content="ReelRusher">
+   <meta property="og:locale" content="tr_TR">
+
+   <!-- Twitter Card Meta Tags -->
+   <meta name="twitter:card" content="summary_large_image">
+   <meta name="twitter:title" content="Gizlilik ve Çerez Politikası | ReelRusher">
+   <meta name="twitter:description" content="ReelRusher gizlilik politikası ve çerez kullanımı hakkında detaylı bilgi. Kişisel verilerin korunması.">
+   <meta name="twitter:image" content="https://reelrusher.com/assets/6-BJrEYN0P.png">
+   <meta name="twitter:site" content="@reelrusher">
+   <meta name="twitter:creator" content="@reelrusher">
+
    <!-- Title -->
    <title>Gizlilik ve Çerez Politikası - ReelRusher</title>
 
