--- a/about-us.html
+++ b/about-us.html
@@ -7,6 +7,23 @@
    <meta name="description" content="ReelRusher Hakkında - Eğlenceli Match-3 ve Zuma tarzı bulmaca oyunu hakkında bilgi">
    <meta name="robots" content="index, follow">
 
+   <!-- Open Graph Meta Tags -->
+   <meta property="og:title" content="Hakkımızda | ReelRusher">
+   <meta property="og:description" content="ReelRusher ekibi ve oyunun hikayesi hakkında bilgi. Yenilikçi Match-3 bulmaca oyunu geliştirme sürecimiz.">
+   <meta property="og:image" content="https://reelrusher.com/assets/6-BJrEYN0P.png">
+   <meta property="og:url" content="https://reelrusher.com/about-us.html">
+   <meta property="og:type" content="article">
+   <meta property="og:site_name" content="ReelRusher">
+   <meta property="og:locale" content="tr_TR">
+
+   <!-- Twitter Card Meta Tags -->
+   <meta name="twitter:card" content="summary_large_image">
+   <meta name="twitter:title" content="Hakkımızda | ReelRusher">
+   <meta name="twitter:description" content="ReelRusher ekibi ve oyunun hikayesi hakkında bilgi. Yenilikçi Match-3 bulmaca oyunu geliştirme sürecimiz.">
+   <meta name="twitter:image" content="https://reelrusher.com/assets/6-BJrEYN0P.png">
+   <meta name="twitter:site" content="@reelrusher">
+   <meta name="twitter:creator" content="@reelrusher">
+
    <!-- Title & Favicon -->
    <title>Hakkımızda | ReelRusher - Match-3 Bulmaca Oyunu</title>
    <link rel="shortcut icon" href="assets/favicon.png" type="image/png">
