--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,23 @@
    <meta name="description" content="ReelRusher İletişim - Eğlenceli Match-3 ve Zuma tarzı bulmaca oyunu ile iletişime geçin">
    <meta name="robots" content="index, follow">
 
+   <!-- Open Graph Meta Tags -->
+   <meta property="og:title" content="İletişim | ReelRusher">
+   <meta property="og:description" content="ReelRusher ile iletişime geçin. Sorularınız, önerileriniz ve geri bildirimleriniz için bizimle irtibata geçebilirsiniz.">
+   <meta property="og:image" content="https://reelrusher.com/assets/6-BJrEYN0P.png">
+   <meta property="og:url" content="https://reelrusher.com/contact.html">
+   <meta property="og:type" content="article">
+   <meta property="og:site_name" content="ReelRusher">
+   <meta property="og:locale" content="tr_TR">
+
+   <!-- Twitter Card Meta Tags -->
+   <meta name="twitter:card" content="summary_large_image">
+   <meta name="twitter:title" content="İletişim | ReelRusher">
+   <meta name="twitter:description" content="ReelRusher ile iletişime geçin. Sorularınız, önerileriniz ve geri bildirimleriniz için bizimle irtibata geçebilirsiniz.">
+   <meta name="twitter:image" content="https://reelrusher.com/assets/6-BJrEYN0P.png">
+   <meta name="twitter:site" content="@reelrusher">
+   <meta name="twitter:creator" content="@reelrusher">
+
    <!-- Title & Favicon -->
    <title>İletişim | ReelRusher - Match-3 Bulmaca Oyunu</title>
    <link rel="shortcut icon" href="assets/favicon.png" type="image/png">
