--- a/game-art.html
+++ b/game-art.html
@@ -7,6 +7,23 @@
    <meta name="description" content="ReelRusher - Oyun Sanatı ve Kapaklar | Görsel tasarım ve sanat galerisi">
    <meta name="robots" content="index, follow">
 
+   <!-- Open Graph Meta Tags -->
+   <meta property="og:title" content="Oyun Sanatı ve Kapaklar | ReelRusher">
+   <meta property="og:description" content="ReelRusher'ın görsel sanat galerisi ve oyun kapakları. Rengarenk tasarımlar ve yaratıcı görsel efektler.">
+   <meta property="og:image" content="https://reelrusher.com/assets/6-BJrEYN0P.png">
+   <meta property="og:url" content="https://reelrusher.com/game-art.html">
+   <meta property="og:type" content="article">
+   <meta property="og:site_name" content="ReelRusher">
+   <meta property="og:locale" content="tr_TR">
+
+   <!-- Twitter Card Meta Tags -->
+   <meta name="twitter:card" content="summary_large_image">
+   <meta name="twitter:title" content="Oyun Sanatı ve Kapaklar | ReelRusher">
+   <meta name="twitter:description" content="ReelRusher'ın görsel sanat galerisi ve oyun kapakları. Rengarenk tasarımlar ve yaratıcı görsel efektler.">
+   <meta name="twitter:image" content="https://reelrusher.com/assets/6-BJrEYN0P.png">
+   <meta name="twitter:site" content="@reelrusher">
+   <meta name="twitter:creator" content="@reelrusher">
+
    <!-- Title & Favicon -->
    <title>Oyun Sanatı ve Kapaklar | ReelRusher - Match-3 Puzzle Oyunu</title>
    <link rel="shortcut icon" href="assets/favicon.png" type="image/png">
