--- a/roadmap.html
+++ b/roadmap.html
@@ -7,6 +7,23 @@
    <meta name="description" content="ReelRusher - Match-3 Zuma Tarzı Puzzle Oyunu">
    <meta name="robots" content="index, follow">
 
+   <!-- Open Graph Meta Tags -->
+   <meta property="og:title" content="Geliştirme Yol Haritası | ReelRusher">
+   <meta property="og:description" content="ReelRusher'ın gelecek planları ve geliştirme aşamaları. Oyunun ileriye dönük yol haritası ve yeni özellikler.">
+   <meta property="og:image" content="https://reelrusher.com/assets/6-BJrEYN0P.png">
+   <meta property="og:url" content="https://reelrusher.com/roadmap.html">
+   <meta property="og:type" content="article">
+   <meta property="og:site_name" content="ReelRusher">
+   <meta property="og:locale" content="tr_TR">
+
+   <!-- Twitter Card Meta Tags -->
+   <meta name="twitter:card" content="summary_large_image">
+   <meta name="twitter:title" content="Geliştirme Yol Haritası | ReelRusher">
+   <meta name="twitter:description" content="ReelRusher'ın gelecek planları ve geliştirme aşamaları. Oyunun ileriye dönük yol haritası ve yeni özellikler.">
+   <meta name="twitter:image" content="https://reelrusher.com/assets/6-BJrEYN0P.png">
+   <meta name="twitter:site" content="@reelrusher">
+   <meta name="twitter:creator" content="@reelrusher">
+
    <!-- Title & Favicon -->
    <title>Geliştirme Yol Haritası | ReelRusher - Match-3 Zuma Tarzı Puzzle Oyunu</title>
    <link rel="shortcut icon" href="assets/favicon.png" type="image/png">
