--- a/technology.html
+++ b/technology.html
@@ -7,6 +7,23 @@
    <meta name="description" content="ReelRusher - Teknoloji ve Platformlar | Match-3 + Zuma hibrit oyunu">
    <meta name="robots" content="index, follow">
 
+   <!-- Open Graph Meta Tags -->
+   <meta property="og:title" content="Teknoloji ve Platformlar | ReelRusher">
+   <meta property="og:description" content="ReelRusher'ın teknoloji altyapısı ve desteklenen platformlar hakkında bilgi. Unity tabanlı modern oyun teknolojisi.">
+   <meta property="og:image" content="https://reelrusher.com/assets/6-BJrEYN0P.png">
+   <meta property="og:url" content="https://reelrusher.com/technology.html">
+   <meta property="og:type" content="article">
+   <meta property="og:site_name" content="ReelRusher">
+   <meta property="og:locale" content="tr_TR">
+
+   <!-- Twitter Card Meta Tags -->
+   <meta name="twitter:card" content="summary_large_image">
+   <meta name="twitter:title" content="Teknoloji ve Platformlar | ReelRusher">
+   <meta name="twitter:description" content="ReelRusher'ın teknoloji altyapısı ve desteklenen platformlar hakkında bilgi. Unity tabanlı modern oyun teknolojisi.">
+   <meta name="twitter:image" content="https://reelrusher.com/assets/6-BJrEYN0P.png">
+   <meta name="twitter:site" content="@reelrusher">
+   <meta name="twitter:creator" content="@reelrusher">
+
    <!-- Title & Favicon -->
    <title>Teknoloji ve Platformlar | ReelRusher - Match-3 Puzzle Oyunu</title>
    <link rel="shortcut icon" href="assets/favicon.png" type="image/png">
