--- a/404.html
+++ b/404.html
@@ -7,15 +7,15 @@
    <meta name="description" content="ReelRusher - Match-3 ve Zuma hibrit puzzle oyunu. Sayfa bulunamadı.">
    <meta name="robots" content="noindex, follow">
 
-   <!-- Title & Favicon -->
    <title>404 - Sayfa Bulunamadı | ReelRusher</title>
    <link rel="shortcut icon" href="assets/favicon.png" type="image/png">
   <script type="module" crossorigin src="assets/main-DwB1b1zN.js"></script>
+  <script src="assets/cookie-consent.js"></script>
   <link rel="stylesheet" crossorigin href="assets/main-B9xypkzf.css">
+  <link rel="stylesheet" href="assets/cookie-consent.css">
 </head>
 
 <body>
-   <!-- Preloader -->
    <div class="preloader" id="preloader">
       <div class="spinner-grow" role="status">
          <span class="visually-hidden">Yükleniyor...</span>
@@ -24,13 +24,10 @@
 
    
  
-   <!-- Header Area -->
    <header class="header-area">
-      <!-- Header Top -->
       <div class="header-top">
          <div class="container h-100">
             <div class="h-100 d-flex align-items-center justify-content-between">
-               <!-- Left Side Content -->
                     <div class="left-side d-flex align-items-center gap-2 gap-md-3 gap-lg-4">
                      <div class="d-flex align-items-center gap-1">
                        <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewbox="0 0 18 18" fill="none">
@@ -60,16 +57,13 @@
                      </div>
                     </div>
 
-               <!-- Right Side Content -->
              
             </div>
          </div>
       </div>
 
-      <!-- Navbar -->
       <div class="container">
          <nav class="navbar navbar-expand-xl">
-            <!-- Navbar Brand -->
             <a class="navbar-brand" href="index.html">
                <img src="assets/nav-brand.png" alt="ReelRusher" style="width: auto; height: 60px;">
             </a>
@@ -189,7 +183,7 @@
                   <h4 class="mb-4" style="color: #FFFFFF;">Oyun Hakkında</h4>
                   <ul class="list-unstyled footer-nav-two">
                      <li><a href="mechanics.html" style="color: #E8F5E8;">Oyun Mekanikleri</a></li>
-                     <li><a href="game-arts.html" style="color: #E8F5E8;">Oyun Sanatı ve Kapaklar</a></li>
+                     <li><a href="game-art.html" style="color: #E8F5E8;">Oyun Sanatı ve Kapaklar</a></li>
                      <li><a href="team.html" style="color: #E8F5E8;">Geliştirici Ekibi</a></li>
                      <li><a href="technology.html" style="color: #E8F5E8;">Teknoloji ve Platformlar</a></li>
                      <li><a href="roadmap.html" style="color: #E8F5E8;">Geliştirme Yol Haritası</a></li>
@@ -260,12 +254,10 @@
    </footer>
 
    <!-- Cookie Alert -->
-   <div class="cookiealert shadow-lg show">
-      <h4 class="text-white"><i class="ti ti-cookie"></i> Cookie Alert</h4>
-      <p class="mb-4 text-white">We use cookies for the best experience on our website, for social media features and to
-         anal
-         traffic. accepting you agree to our use of cookies. Read <a href="#" target="_blank"> Cookies Policy.</a></p>
-      <button class="btn btn-dark btn-sm acceptcookies" type="button" aria-label="Close">Accept</button>
+   <div class="cookiealert shadow-lg">
+      <h4 class="text-white"><i class="ti ti-cookie"></i> Çerez Uyarısı</h4>
+      <p class="mb-4 text-white">Web sitemizde en iyi deneyimi yaşamanız için çerezleri kullanıyoruz. Devam ederek çerez kullanımını kabul etmiş olursunuz. <a href="privacy-policy.html" target="_blank">Çerez Politikası</a> için tıklayın.</p>
+      <button class="btn btn-dark btn-sm acceptcookies" type="button" aria-label="Close">Kabul Et</button>
    </div>
 
    <!-- Scroll To Top -->
