--- a/game-art.html
+++ b/game-art.html
@@ -28,7 +28,9 @@
    <title>Oyun Sanatı ve Kapaklar | ReelRusher - Match-3 Puzzle Oyunu</title>
    <link rel="shortcut icon" href="assets/favicon.png" type="image/png">
   <script type="module" crossorigin src="assets/main-DwB1b1zN.js"></script>
+  <script src="assets/cookie-consent.js"></script>
   <link rel="stylesheet" crossorigin href="assets/main-B9xypkzf.css">
+  <link rel="stylesheet" href="assets/cookie-consent.css">
 </head>
 
 <body>
@@ -371,7 +373,7 @@
                   <h4 class="mb-4" style="color: #FFFFFF;">Oyun Hakkında</h4>
                   <ul class="list-unstyled footer-nav-two">
                      <li><a href="mechanics.html" style="color: #E8F5E8;">Oyun Mekanikleri</a></li>
-                     <li><a href="game-arts.html" style="color: #E8F5E8;">Oyun Sanatı ve Kapaklar</a></li>
+                     <li><a href="game-art.html" style="color: #E8F5E8;">Oyun Sanatı ve Kapaklar</a></li>
                      <li><a href="team.html" style="color: #E8F5E8;">Geliştirici Ekibi</a></li>
                      <li><a href="technology.html" style="color: #E8F5E8;">Teknoloji ve Platformlar</a></li>
                      <li><a href="roadmap.html" style="color: #E8F5E8;">Geliştirme Yol Haritası</a></li>
@@ -442,12 +444,10 @@
    </footer>
 
    <!-- Cookie Alert -->
-   <div class="cookiealert shadow-lg show">
-      <h4 class="text-white"><i class="ti ti-cookie"></i> Cookie Alert</h4>
-      <p class="mb-4 text-white">We use cookies for the best experience on our website, for social media features and to
-         anal
-         traffic. accepting you agree to our use of cookies. Read <a href="#" target="_blank"> Cookies Policy.</a></p>
-      <button class="btn btn-dark btn-sm acceptcookies" type="button" aria-label="Close">Accept</button>
+   <div class="cookiealert shadow-lg">
+      <h4 class="text-white"><i class="ti ti-cookie"></i> Çerez Uyarısı</h4>
+      <p class="mb-4 text-white">Web sitemizde en iyi deneyimi yaşamanız için çerezleri kullanıyoruz. Devam ederek çerez kullanımını kabul etmiş olursunuz. <a href="privacy-policy.html" target="_blank">Çerez Politikası</a> için tıklayın.</p>
+      <button class="btn btn-dark btn-sm acceptcookies" type="button" aria-label="Close">Kabul Et</button>
    </div>
 
    <!-- Scroll To Top -->
