--- a/team.html
+++ b/team.html
@@ -28,7 +28,9 @@
    <title>Geliştirici Ekibi | ReelRusher - Match-3 Zuma Tarzı Puzzle Oyunu</title>
    <link rel="shortcut icon" href="assets/favicon.png" type="image/png">
   <script type="module" crossorigin src="assets/main-DwB1b1zN.js"></script>
+  <script src="assets/cookie-consent.js"></script>
   <link rel="stylesheet" crossorigin href="assets/main-B9xypkzf.css">
+  <link rel="stylesheet" href="assets/cookie-consent.css">
   
   <!-- Custom CSS Override for Header -->
   <style>
@@ -562,7 +564,7 @@
                   <h4 class="mb-4" style="color: #FFFFFF;">Oyun Hakkında</h4>
                   <ul class="list-unstyled footer-nav-two">
                      <li><a href="mechanics.html" style="color: #E8F5E8;">Oyun Mekanikleri</a></li>
-                     <li><a href="game-arts.html" style="color: #E8F5E8;">Oyun Sanatı ve Kapaklar</a></li>
+                     <li><a href="game-art.html" style="color: #E8F5E8;">Oyun Sanatı ve Kapaklar</a></li>
                      <li><a href="team.html" style="color: #E8F5E8;">Geliştirici Ekibi</a></li>
                      <li><a href="technology.html" style="color: #E8F5E8;">Teknoloji ve Platformlar</a></li>
                      <li><a href="roadmap.html" style="color: #E8F5E8;">Geliştirme Yol Haritası</a></li>
@@ -876,10 +878,10 @@
    </script>
 
    <!-- Cookie Alert -->
-   <div class="cookiealert shadow-lg show">
+   <div class="cookiealert shadow-lg">
       <h4 class="text-white"><i class="ti ti-cookie"></i> Çerez Bildirimi</h4>
       <p class="mb-4 text-white">Web sitemizde en iyi deneyimi sunmak, sosyal medya özellikleri için ve trafiği analiz etmek 
-         amacıyla çerezler kullanıyoruz. <a href="#" target="_blank">Çerez Politikası</a>'nı inceleyin.</p>
+         amacıyla çerezler kullanıyoruz. <a href="privacy-policy.html" target="_blank">Çerez Politikası</a>'nı inceleyin.</p>
       <button class="btn btn-dark btn-sm acceptcookies" type="button" aria-label="Close">Kabul Et</button>
    </div>
 
