--- a/terms-of-use.html
+++ b/terms-of-use.html
@@ -32,6 +32,8 @@
 
    <!-- CSS Files -->
    <link rel="stylesheet" href="assets/main-B9xypkzf.css">
+   <link rel="stylesheet" href="assets/cookie-consent.css">
+   <script src="assets/cookie-consent.js"></script>
 
    <!-- Meta Tags -->
    <meta name="description" content="ReelRusher kullanım koşulları ve hizmet şartları. Oyunu kullanmadan önce lütfen okuyun.">
@@ -257,7 +259,7 @@
                   <h4 class="mb-4" style="color: #FFFFFF;">Oyun Hakkında</h4>
                   <ul class="list-unstyled footer-nav-two">
                      <li><a href="mechanics.html" style="color: #E8F5E8;">Oyun Mekanikleri</a></li>
-                     <li><a href="game-arts.html" style="color: #E8F5E8;">Oyun Sanatı ve Kapaklar</a></li>
+                     <li><a href="game-art.html" style="color: #E8F5E8;">Oyun Sanatı ve Kapaklar</a></li>
                      <li><a href="team.html" style="color: #E8F5E8;">Geliştirici Ekibi</a></li>
                      <li><a href="technology.html" style="color: #E8F5E8;">Teknoloji ve Platformlar</a></li>
                      <li><a href="roadmap.html" style="color: #E8F5E8;">Geliştirme Yol Haritası</a></li>
@@ -328,7 +330,7 @@
    </footer>
 
    <!-- Cookie Alert -->
-   <div class="cookiealert shadow-lg show">
+   <div class="cookiealert shadow-lg">
       <h4 class="text-white"><i class="ti ti-cookie"></i> Çerez Uyarısı</h4>
       <p class="mb-4 text-white">Web sitemizde en iyi deneyimi yaşamanız için çerezleri kullanıyoruz. Devam ederek çerez kullanımını kabul etmiş olursunuz. <a href="privacy-policy.html" target="_blank">Çerez Politikası</a> için tıklayın.</p>
       <button class="btn btn-dark btn-sm acceptcookies" type="button" aria-label="Close">Kabul Et</button>
